<resources>
    <string name="app_name">ParkingPanda</string>
    <string name="string_image_fail">이미지를 불러오는데 실패했습니다.</string>
    <string name="charge_activity_title">포인트 충전</string>
    <string name="charge_activity_content_my_point">내 포인트</string>
    <string name="charge_activity_content_charge_point">충전할 포인트</string>
    <string name="charge_activity_content_charge_point_hint">숫자만 입력해 주세요.</string>
    <string name="charge_activity_content_charge_btn">충전 하기</string>
    <string name="find_id_activity_title">아이디 찾기</string>
    <string name="find_id_activity_content_name">이름</string>
    <string name="find_id_activity_content_name_hint">이름을 입력하세요.</string>
    <string name="find_id_activity_content_tel">전화번호</string>
    <string name="find_id_activity_content_tel_hint">전화번호를 입력하세요.</string>
    <string name="find_id_activity_content_find_id_btn">아이디 찾기</string>
    <string name="find_pwd_activity_title">비밀번호 찾기</string>
    <string name="find_pwd_activity_content_id">아이디</string>
    <string name="find_pwd_activity_content_id_hint">아이디를 입력하세요.</string>
    <string name="find_pwd_activity_content_name">이름</string>
    <string name="find_pwd_activity_content_name_hint">이름을 입력하세요.</string>
    <string name="find_pwd_activity_content_tel">전화번호</string>
    <string name="find_pwd_activity_content_tel_hint">전화번호를 입력하세요.</string>
    <string name="find_pwd_activity_content_find_pwd_btn">비밀번호 찾기</string>
    <string name="logo_activity_content_logo">주차하는 똑똑한 습관, \n ParkingPanda</string>
    <string name="main_activity_title">주차장 리스트</string>
    <string name="my_car_list_activity_title">내 자동차</string>
    <string name="my_car_list_activity_content_btn">차량 등록</string>
    <string name="my_pay_list_activity_title">결제 내역</string>
    <string name="pay_result_activity_title">실시간 요금 조회</string>
    <string name="pay_result_activity_content_in_time">입차 시간</string>
    <string name="pay_result_activity_content_in_time_value">입차시간</string>
    <string name="pay_result_activity_content_out_time">현재 시간</string>
    <string name="pay_result_activity_content_out_time_val">현재 시간</string>
    <string name="pay_result_activity_content_cost">현재 금액</string>
    <string name="pay_result_activity_content_cost_val">주차 요금</string>
    <string name="sign_in_activity_content_id">아이디</string>
    <string name="sign_in_activity_content_id_hint">아이디를 입력하세요.</string>
    <string name="sign_in_activity_content_pwd">비밀번호</string>
    <string name="sign_in_activity_content_pwd_hint">비밀번호를 입력하세요.</string>
    <string name="sign_in_activity_content_remember_id_and_pwd_check">아이디/비밀번호 기억하기</string>
    <string name="sign_in_activity_content_go_sign_up_btn">회원가입</string>
    <string name="sign_in_activity_content_sign_in_btn">로그인</string>
    <string name="sign_in_activity_content_go_find_id_btn">아이디 찾기</string>
    <string name="sign_in_activity_content_go_find_pwd_btn">비밀번호 찾기</string>
    <string name="sign_up_activity_title">회원가입</string>
    <string name="sign_up_activity_content_id">아이디</string>
    <string name="sign_up_activity_content_id_hint">아이디</string>
    <string name="sign_up_activity_content_double_check_btn">중복확인</string>
    <string name="sign_up_activity_content_pwd">비밀번호</string>
    <string name="sign_up_activity_content_pwd_hint">비밀번호</string>
    <string name="sign_up_activity_content_re_pwd">비밀번호 재입력</string>
    <string name="sign_up_activity_content_re_pwd_hint">비밀번호 재입력</string>
    <string name="sign_up_activity_content_name">이름</string>
    <string name="sign_up_activity_content_name_hint">실명을 입력하세요</string>
    <string name="sign_up_activity_content_phone">휴대폰 번호</string>
    <string name="sign_up_activity_content_phone_hint">\'-\'구분없이 입력</string>
    <string name="sign_up_activity_content_car_number">차량 번호</string>
    <string name="sign_up_activity_content_car_number_hint">차량의 번호를 입력하세요.</string>
    <string name="sign_up_activity_content_sign_up_btn">가입하기</string>
    <string name="sub_activity_title">주차장 현황</string>
    <string name="sub_activity_title_parking_lot_name">주차장</string>
    <string name="user_activity_content_user_name">사용자</string>
    <string name="user_activity_content_user_id">사용자</string>
    <string name="user_activity_content_user_point">내 포인트 :</string>
    <string name="user_activity_content_user_point_value">userPoint</string>
    <string name="user_activity_content_user_point_value_unit">p</string>
    <string name="user_activity_content_user_car">내 자동차</string>
    <string name="add_car_dialog_title">신규 차량 등록</string>
    <string name="add_car_dialog_content_car_number">차량 번호</string>
    <string name="add_car_dialog_car_number_hint">차량의 번호를 입력해주세요.</string>
    <string name="add_car_dialog_content_add_car_btn">등록하기</string>
    <string name="add_car_fail_dialog_title">신규 차량 등록 실패</string>
    <string name="add_car_fail_dialog_content_string">차량은 2개까지 등록이 가능합니다.</string>
    <string name="add_car_fail_dialog_content_ok_btn">확인</string>
    <string name="pay_result_dialog_title">요금 조회 실패</string>
    <string name="pay_result_dialog_content">요금 정산이 필요한 \n 이용 내역이 없습니다.</string>
    <string name="sub_dialog_detail_info_parking_lot_name">A</string>
    <string name="main_drawer_header_content_user_name">로그인</string>
    <string name="main_drawer_header_content_user_name_title">님</string>
    <string name="main_drawer_header_content_user_point">내 포인트 :</string>
    <string name="main_drawer_header_content_user_point_val">point</string>
    <string name="main_drawer_header_content_user_point_value_unit">p</string>
    <string name="main_drawer_header_content_go_charge_point_btn">충전</string>
    <string name="main_drawer_header_content_user_car">내 자동차</string>
    <string name="main_drawer_header_content_go_my_car_list">조회</string>
    <string name="main_recycle_view_item_parking_lot_name">주차장 이름</string>
    <string name="main_recycle_view_item_empty_area_count">사용가능한 자리 :</string>
    <string name="main_recycle_view_item_empty_area_count_value">빈자리</string>
    <string name="main_activity_content_Viewpager_MapView">지도 보기</string>
    <string name="main_activity_content_Viewpager_ListView">목록 보기</string>
    <string name="my_car_recycle_view_item_car_number">차량 번호 :</string>
    <string name="my_car_recycle_view_item_car_number_value">num</string>
    <string name="my_pay_list_activity_content_filtering_list_title">날짜 검색</string>
    <string name="my_pay_list_activity_content_filtering_list_date_hint">결제일</string>
    <string name="my_pay_list_activity_content_filtering_list_date_between">~</string>
    <string name="my_pay_list_recycle_view_item_car_number">차 번호</string>
    <string name="my_pay_list_recycle_view_item_amount_val">결제 금액</string>
    <string name="my_pay_list_recycle_view_item_amount_val_unit">원</string>
    <string name="my_pay_list_recycle_view_item_in_time">입차 시간</string>
    <string name="my_pay_list_recycle_view_item_time">~</string>
    <string name="my_pay_list_recycle_view_item_out_time">출차 시간</string>
    <string name="sub_recycle_view_item_area_id">area_id</string>
    <string name="user_recycle_view_item_car_number">carNum</string>
    <string name="sub_dialog_detail_info_title">주차장</string>
    <string name="sub_dialog_detail_info_address">서울특별시 강남구 삼성로</string>
    <string name="sub_dialog_detail_info_number">1234-5678-9876</string>
    <string name="sub_dialog_detail_info_content_fee">시간 요금</string>
    <string name="sub_dialog_detail_info_content_fee_default">기본 요금</string>
    <string name="sub_dialog_detail_info_content_fee_default_values">30분에 3000원</string>
    <string name="sub_dialog_detail_info_content_fee_add">추가 요금</string>
    <string name="sub_dialog_detail_info_content_fee_add_values">5분에 500원</string>
    <string name="sub_dialog_detail_info_content_open_time">운영 시간</string>
    <string name="sub_dialog_detail_info_content_open_time_weekday">평일</string>
    <string name="sub_dialog_detail_info_content_open_time_weekday_values">09:00 ~ 11:00</string>
    <string name="sub_dialog_detail_info_content_open_time_weekend">주말</string>
    <string name="sub_dialog_detail_info_content_open_time_weekend_values">00:00 ~ 24:00</string>
    <string name="sub_dialog_detail_info_content_open_time_holiday">공휴일</string>
    <string name="sub_dialog_detail_info_content_open_time_holiday_values">00:00 ~ 24:00</string>
</resources>