<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FindPwdActivity"
    android:background="#434343">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#434343"
        android:elevation="10dp"
        android:clipToPadding="false"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/goSignIn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_btn"
            android:layout_margin="10dp"
            android:onClick="goSignIn"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:gravity="end">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_text"
                android:contentDescription="@string/string_image_fail"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd_activity_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd_activity_content_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="5dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/findPwdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find_pwd_activity_content_id_hint"
            android:inputType="text"
            android:autofillHints="point"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_id_activity_content_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/findPwdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/find_id_activity_content_name_hint"
            android:autofillHints="point"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_id_activity_content_tel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/findPwdTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/find_id_activity_content_tel_hint"
            android:autofillHints="point"
            tools:ignore="LabelFor" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/find_id_activity_content_find_id_btn"
            android:layout_margin="25dp"
            android:onClick="findPwd"/>
        <TextView
            android:id="@+id/findPwdResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>
</LinearLayout>