<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    android:background="#434343"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/string_image_fail"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_activity_content_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="5dp"
                android:paddingStart="3dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/signInId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_activity_content_id_hint"
                android:inputType="text"
                android:autofillHints="signInId"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_activity_content_pwd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingStart="3dp"
                tools:ignore="RtlSymmetry" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/signInPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/sign_in_activity_content_pwd_hint"
                    android:autofillHints="signInPwd"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/rememberIdAndPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_activity_content_remember_id_and_pwd_check"/>
                <!--<CheckBox
                    android:id="@+id/autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="자동 로그인"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"/>-->
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/goSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_activity_content_go_sign_up_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_weight="1"
                    android:onClick="goSignUp"
                    android:background="@drawable/btn3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <Button
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_activity_content_sign_in_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_weight="1"
                    android:onClick="signIn"
                    android:background="@drawable/btn3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/findId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_activity_content_go_find_id_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:backgroundTint="#434343"
                    android:background="#434343"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="goFindId"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="15dp"/>
                <Button
                    android:id="@+id/findPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_activity_content_go_find_pwd_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:backgroundTint="#434343"
                    android:background="#434343"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="goFindPwd"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>