<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#434343"
    android:layout_margin="30dp"
    android:padding="10dp">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pay_result_dialog_title"
        android:textSize="23sp"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_result_dialog_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <Button
        android:id="@+id/payResultFailOk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add_car_fail_dialog_content_ok_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="#f7c873"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn1"/>
</LinearLayout>