<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">
        <!-- Image -->
        <ImageView
            android:id="@+id/parkingLotImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/paring_lot_icon"
            android:background="@drawable/profile"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/string_image_fail"/>
        <!-- Name -->
        <TextView
            android:id="@+id/parkingLotName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_recycle_view_item_parking_lot_name"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
        <!-- State -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end|center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/main_recycle_view_item_empty_area_count"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/parkingLotEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/main_recycle_view_item_empty_area_count_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:maxLines="1"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <!-- line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="#aaa"/>
</LinearLayout>