<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#434343"
    android:elevation="10dp"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_car_fail_dialog_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_car_fail_dialog_content_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="5dp"
                android:paddingStart="3dp"
                tools:ignore="RtlSymmetry" />
            <Button
                android:id="@+id/addCarFailOk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_car_fail_dialog_content_ok_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="#f7c873"
                android:layout_margin="25dp"
                android:background="@drawable/btn1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>