<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyCarListActivity"
    android:background="#434343">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#434343"
        android:elevation="10dp"
        android:clipToPadding="false"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/goSignIn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_btn"
            android:layout_margin="10dp"
            android:onClick="goMain"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:contentDescription="@string/string_image_fail">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_text"
                android:contentDescription="@string/string_image_fail"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_car_list_activity_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginBottom="25dp"/>
            <ImageView
                android:onClick="goAddCarPage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add_btn"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/string_image_fail"/>
            <Button
                android:onClick="goAddCarPage"
                android:id="@+id/plusCar"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/my_car_list_activity_content_btn"
                android:background="@drawable/btn2"
                android:layout_marginEnd="20dp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myCarList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>